--- a/jdbc-dev.properties
+++ b/jdbc-dev.properties
@@ -1,4 +1,4 @@
-url=jdbc\:mysql\://localhost\:3306/food
+url=jdbc\:mysql\://localhost\:3306/auth
 driverClass=com.mysql.jdbc.Driver
 userid=root
 password2=123456
